--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     </div>
     
     <div class="plan-info">
-      <h4>Annual Plan</h4>
-      <h4><code> $59.99/year</code></h4>
+      <span class="plan-info-details">Annual Plan</span></br>
+      <span class="plan-info-details"><code> $59.99/year</code></span>
     </div>
 
     <div class="change-info">
-      <a href="#"><h5>Change</h5></a>
+      <a href="#"><span class="change-info-details">Change</span></a>
     </div>
   </div>
 
   <div class="payment">
-    <button class="button" type="submit" form="#" value="submit"> Proceed to Payment </button>
+    <button class="button" type="submit" form="form" value="submit"> Proceed to Payment </button>
   </div>
   
   <div class="cancel-info">
-    <h4>Cancel Order</h4>
+    <span class="cancel-info-details">Cancel Order</span>
   </div>
 </div>
 
