--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="payment">
-    <button class="button" type="submit" form="form" value="submit"> Proceed to Payment </button>
+    <button class="button" type="submit" form="form1" value="submit"> Proceed to Payment </button>
   </div>
   
   <div class="cancel-info">
